styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* TYPOGRAPHY */

html {
    font-family: "input-mono-narrow", monospace;
    font-weight: 400;
    font-style: normal;
    font-size: 1rem;
    line-height: 1.5em;
}

h1, h2, h3 {
    font-family: "input-mono", monospace;
    font-weight: 700;
    font-style: normal;
    font-size: 3rem;
    line-height: 3.5rem;
}

h2 {
    font-size: 2rem;
    line-height: 2.5rem;
}

h3 {
    font-size: 1.25rem;
    line-height: 1.75rem;
}

footer p {
    color: white;
}

span {
    font-family: sans-serif;
}

/* NAVIGATION */

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

a img {
    width: 100%;
}

nav img {
    max-height: 14rem;
}

nav ul {
    list-style-type: none;
    display: flex;
    justify-content: space-between;
}

nav li {
    padding-left: 3rem;
    text-align: center;
}

nav a:link, nav a:visited {
    color: white;
    text-decoration: none;
    border-bottom: 2px solid white;
}

nav a:focus {
    outline: 1px solid white;
    outline-offset: 6px;
    border-bottom: none;
}

nav a:hover, nav a:active {
    border-bottom: 4px solid white;
    outline: none;
}

a.logo:link, a.logo:hover, a.logo:focus, a.logo:active, a.logo:visited {
    border-bottom: none;
}

/* LAYOUT */

nav {
    padding: 2rem;
    background-color: black;
}

img.banner {
    width: 100%;
    position: relative;
    bottom: 10px;
}

div.border img {
    border: 1px solid gray;
}

h2 a:link, h2 a:visited {
    color: black;
    text-decoration: none;
    border-bottom: 2px solid black;
}

h2 a:focus {
    outline: 1px solid black;
    outline-offset: 4px;
    border-bottom: none;
}

h2 a:hover, h2 a:active {
    border-bottom: 4px solid black;
    outline: none;
}

h3 a:link, h3 a:visited {
    color: black;
    text-decoration: none;
    border-bottom: 2px solid black;
}

h3 a:focus {
    outline: 1px solid black;
    outline-offset: 4px;
    border-bottom: none;
}

h3 a:hover, h3 a:active {
    border-bottom: 4px solid black;
    outline: none;
}

main {
    margin-top: 3rem;
    margin-left: auto;
    margin-right: auto;
    max-width: 40rem;
    padding-left: 2rem;
    padding-right: 2rem;
}

main.full-width {
    max-width: none;
}

section.reduced-width {
    max-width: 40rem;
    margin-left: auto;
    margin-right: auto;
}

iframe {
    margin-top: 3rem;
    width: 100%;
}

iframe.map {
    height: 40rem;
}

iframe.ref {
    display: block;
    max-width: 48rem;
    margin-left: auto;
    margin-right: auto;
    height: 50rem;
}

footer {
    background-color: black;
    padding: 2rem;
    margin-top: 3rem;
    text-align: center;
}

h1 {
    margin-bottom: 2rem;
}

h2 {
    margin-bottom: 1rem;
}

/* BIO GRID LAYOUT */

section.bio-container {
    max-width: 65rem;
    margin-left: auto;
    margin-right: auto;
    margin-top: 5rem;
    margin-bottom: 5rem;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 100px, auto, 100px;
    gap: 1.5rem 3rem;
}

.bio-image {
    width: 100%;
    max-width: 20rem;
    border-radius: 100%;
    grid-column: 1 / span 1;
    grid-row: 1 / span 3;
}

.bio-name {
    grid-column: 2 / span 2;
    grid-row: 1 / span 1;
}

.bio {
    grid-column: 2 / span 2;
    grid-row: 2 / span 1;
}

.bio-audio {
    grid-column: 2 / span 2;
    grid-row: 3 / span 1;
}

/* AR IMAGE GRID LAYOUTS */

section.two-up-container {
    display: grid;
    margin-top: 3rem;
    grid-template-columns: 1fr 1fr;
    gap: 2rem;
}

.image-grid img {
    width: 100%;
}

div.flex {
    display: flex;
    flex-flow: row no wrap;
    align-items: center;
}

.flex img {
    width: 33%;
    max-width: 10rem;
    padding-right: 2rem;
}

/* MEDIA QUERIES */

@media screen and (max-width: 60rem) {
/* when the screen width is under 60rem, 
navigation becomes vertical, headings get smaller,
and grids become vertical*/

    h1 {
        font-size: 2rem;
        line-height: 2.5rem;
        margin-bottom: 1rem;
    }

    h2 {
        font-size: 1.5rem;
        line-height: 2rem;
        margin-bottom: 0.5rem;
    }

    nav {
        flex-flow: column;
        align-items: center;
    }

    nav ul {
        flex-flow: column;
        margin-top: 1rem;
        align-items: center;
    }

    nav li {
        padding-top: 1rem;
        padding-left: 0;
    }

    section.bio-container {
        max-width: 40rem;
        margin-left: auto;
        margin-right: auto;
        margin-top: 4rem;
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 25rem, 100px, auto, 100px;
        gap: 1.5rem 3rem;
        justify-items: center;
    }
    
    .bio-image {
        width: 100%;
        border-radius: 100%;
        grid-column: 1 / span 1;
        grid-row: 1 / span 1;
    }
    
    .bio-name {
        grid-column: 1 / span 1;
        grid-row: 2 / span 1;
    }
    
    .bio {
        grid-column: 1 / span 1;
        grid-row: 3 / span 1;
    }
    
    .bio-audio {
        grid-column: 1 / span 1;
        grid-row: 4 / span 1;
    }

    section.two-up-container {
        max-width: 40rem;
        margin-left: auto;
        margin-right: auto;
        grid-template-columns: 1fr;
        gap: 3rem;
    }
}

